# OneMore

./: .gitignore
backend/: .pre-commit-config.yaml  Makefile  manage.py  pyproject.toml  setup.cfg
backend/api/: schemas.py  urls.py
backend/api/v1/: schemas.py  urls.py
backend/api/v1/device/: handlers.py  shemas.py
backend/api/v1/posts/: handlers.py
backend/api/v1/users/: handlers.py  schemas.py
backend/apps/basket/: entities.py  models.py
backend/apps/basket/migrations/: 0001_initial.py  0002_initial.py  0003_alter_basketitem_unique_together_and_more.py  0004_alter_basket_options_alter_basket_devices_and_more.py
backend/apps/common/: base_entities.py  base_exeption.py  error_handlers.py  models.py  utils.py
backend/apps/devices/: entities.py  models.py
backend/apps/devices/migrations/: 0001_initial.py  0002_alter_brand_table_alter_device_table_and_more.py  0002_initial.py  0003_alter_rating_options_alter_rating_unique_together_and_more.py
backend/apps/devices/services/: device_service.py
backend/apps/problems/: models.py
backend/apps/problems/migrations/: 0001_initial.py  0002_problem_author.py
backend/apps/users/: entities.py  models.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_basket_table_alter_basketdevice_table.py  0002_basket_basketdevice_basket_devices.py  0002_user_role.py  0003_alter_user_role.py
backend/apps/users/repositories/: converter.py  user_repository.py
backend/apps/users/services/: user_service.py
backend/myproject/: asgi.py  settings.py  urls.py  wsgi.py
backend/myproject/settings/: base.py  dev.py  prod.py
backend/src/api/: exceptions.py  filters.py  schemas.py  urls.py
backend/src/api/v1/device/: handlers.py  shemas.py
backend/src/api/v1/posts/: handlers.py
backend/src/api/v1/users/: filters.py  handlers.py  schemas.py
backend/src/apps/basket/: entities.py  models.py
backend/src/apps/basket/migrations/: 0001_initial.py  0002_initial.py
backend/src/apps/common/: __init__.py  base_service.py  base_use_case.py  error_handlers.py  exception.py  models.py  utils.py
backend/src/apps/devices/: entities.py  models.py
backend/src/apps/devices/migrations/: 0001_initial.py  0002_initial.py
backend/src/apps/devices/services/: device_service.py
backend/src/apps/problems/models/: models.py
backend/src/apps/users/: admin.py  apps.py  entities.py  filters.py  models.py
backend/src/apps/users/excepions/: users.py
backend/src/apps/users/migrations/: 0001_initial.py
backend/src/apps/users/repositories/: __init__.py  converter.py  user_repository.py
backend/src/apps/users/services/: __init__.py  user_creator.py  user_list.py  user_service.py
backend/src/apps/users/use_cases/: __init__.py  create_user.py  search_users.py  update_user.py
backend/src/project/: asgi.py  urls.py  wsgi.py
backend/src/project/settings/: __init__.py  base.py
frontend/: Makefile  eslint.config.mjs  package.json  tsconfig.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/about/: TestCard.tsx  page.tsx
frontend/components/: check.tsx  footer.tsx  icons.tsx  navbar.tsx  theme-switch.tsx
frontend/config/: site.ts
frontend/lib/data/: ProblemSetsData.ts  problemsData.ts
next-js-app/: package.json
next-js-app/app/: layout.tsx  page.tsx
next-js-app/app/users/: page.tsx
next-js-app/app/users/[id]/: page.tsx
